--- a/TGInterferences.ipynb
+++ b/TGInterferences.ipynb
@@ -28,7 +28,8 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb"
+    "%run Import_bibliotheques.ipynb\n",
+    "from matplotlib.animation import FuncAnimation"
    ]
   },
   {
