Fix nbformat: auto-install et config simplifiée

--- a/Import_bibliotheques.ipynb
+++ b/Import_bibliotheques.ipynb
@@ -29,6 +29,11 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "if 'pyodide' in sys.modules:\n",
+    "    import piplite\n",
+    "    await piplite.install(['nbformat', 'lmfit', 'ipympl', 'seaborn'])\n",
+    "\n",
     "from pylab import *    # charge toutes les bibliothèques scientifiques\n",
     "from scipy import interpolate\n",
     "from scipy.optimize import curve_fit    # permet de modéliser selon un modèle personnalisé\n",
