Simplification de l'installation des modules et passage à l'import .py pour JupyterLite

--- a/2ndeReactifLimitant.ipynb
+++ b/2ndeReactifLimitant.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb"
+    "from Import_bibliotheques import *"
    ]
   },
   {
