--- a/TGCircuit_RC_Arduino.ipynb
+++ b/TGCircuit_RC_Arduino.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# Import des bibliothèques nécessaires\n",
-    "%run /home/laurent/fichiers_python/Import_bibliotheques.ipynb\n",
+    "%run /home/laurent/fichiers_python/Import_bibliotheques.py\n",
     "%run /home/laurent/fichiers_python/Arduino.ipynb"
    ]
   },
