--- a/1GSpeEcho_Statistiques_Arduino-plus_modele.ipynb
+++ b/1GSpeEcho_Statistiques_Arduino-plus_modele.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb\n",
+    "from Import_bibliotheques import *\n",
     "%run arduino.ipynb\n",
     "\n",
     "valeurs_moyennes = []\n",
