--- a/1GSpePression_Arduino.ipynb
+++ b/1GSpePression_Arduino.ipynb
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb\n",
+    "from Import_bibliotheques import *\n",
     "%run Arduino.ipynb\n",
     "connexion_arduino()"
    ]
