--- a/Graphique.ipynb
+++ b/Graphique.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb"
+    "from Import_bibliotheques import *"
    ]
   },
   {
