--- a/SpectrophotometreUviline.ipynb
+++ b/SpectrophotometreUviline.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb\n",
+    "from Import_bibliotheques import *\n",
     "\n",
     "from serial import *\n",
     "s = Serial()    # s est le nom du port de communication avec le spectrophotomètre\n",
