--- a/Statistiques.ipynb
+++ b/Statistiques.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb"
+    "from Import_bibliotheques import *"
    ]
   },
   {
