--- a/TGSimulationTitrage.ipynb
+++ b/TGSimulationTitrage.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb"
+    "from Import_bibliotheques import *"
    ]
   },
   {
