--- a/TGSuiviCinetique.ipynb
+++ b/TGSuiviCinetique.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb"
+    "from Import_bibliotheques import *"
    ]
   },
   {
