Correction : retour au %run pour gérer l'installation asynchrone des modules

--- a/1GSpeEcho_Statistiques_Arduino-plus_modele.ipynb
+++ b/1GSpeEcho_Statistiques_Arduino-plus_modele.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "from Import_bibliotheques import *\n",
+    "%run Import_bibliotheques.py\n",
     "%run arduino.ipynb\n",
     "\n",
     "valeurs_moyennes = []\n",
