--- a/ArduinoEnregistrementTempsTension.ipynb
+++ b/ArduinoEnregistrementTempsTension.ipynb
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "from Import_bibliotheques import *\n",
+    "%run Import_bibliotheques.py\n",
     "%run Arduino.ipynb"
    ]
   },
