--- a/SpectrophotometreUviline-EssaiMultiCourbes.ipynb
+++ b/SpectrophotometreUviline-EssaiMultiCourbes.ipynb
@@ -32,7 +32,7 @@
    },
    "outputs": [],
    "source": [
-    "from Import_bibliotheques import *\n",
+    "%run Import_bibliotheques.py\n",
     "\n",
     "from serial import *\n",
     "s = Serial()    # s est le nom du port de communication avec le spectrophotomètre\n",
