--- a/TGSuiviCinetique.ipynb
+++ b/TGSuiviCinetique.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "from Import_bibliotheques import *"
+    "%run Import_bibliotheques.py"
    ]
   },
   {
