--- a/1GSpeCompositionFinale.ipynb
+++ b/1GSpeCompositionFinale.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "from Import_bibliotheques import *"
+    "%run Import_bibliotheques.py"
    ]
   },
   {
