--- a/1GSpePression_Arduino.ipynb
+++ b/1GSpePression_Arduino.ipynb
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "from Import_bibliotheques import *\n",
+    "%run Import_bibliotheques.py\n",
     "%run Arduino.ipynb\n",
     "connexion_arduino()"
    ]
