--- a/Graphique.ipynb
+++ b/Graphique.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "from Import_bibliotheques import *"
+    "%run Import_bibliotheques.py"
    ]
   },
   {
