--- a/Modelisation.ipynb
+++ b/Modelisation.ipynb
@@ -32,7 +32,7 @@
    },
    "outputs": [],
    "source": [
-    "from Import_bibliotheques import *"
+    "%run Import_bibliotheques.py"
    ]
   },
   {
