--- a/Statistiques_Arduino.ipynb
+++ b/Statistiques_Arduino.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "from Import_bibliotheques import *\n",
+    "%run Import_bibliotheques.py\n",
     "%run arduino.ipynb"
    ]
   },
