--- a/TGIncertitudesComposeesMonteCarlo.ipynb
+++ b/TGIncertitudesComposeesMonteCarlo.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "from Import_bibliotheques import *\n",
+    "%run Import_bibliotheques.py\n",
     "from numpy.random import normal    # charge la fonction de génération de distribution selon une loi normale"
    ]
   },
