--- a/Vecteurs.ipynb
+++ b/Vecteurs.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "from Import_bibliotheques import *"
+    "%run Import_bibliotheques.py"
    ]
   },
   {
