Optimisation : installation ultra-légère via notebook (sans pandas/seaborn)

--- a/Statistiques.ipynb
+++ b/Statistiques.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.py"
+    "%run Import_bibliotheques.ipynb"
    ]
   },
   {
