--- a/1GSpeCompositionFinale.ipynb
+++ b/1GSpeCompositionFinale.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.py"
+    "%run Import_bibliotheques.ipynb"
    ]
   },
   {
