--- a/Modelisation.ipynb
+++ b/Modelisation.ipynb
@@ -32,7 +32,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.py"
+    "%run Import_bibliotheques.ipynb"
    ]
   },
   {
