--- a/Statistiques_Arduino.ipynb
+++ b/Statistiques_Arduino.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.py\n",
+    "%run Import_bibliotheques.ipynb\n",
     "%run arduino.ipynb"
    ]
   },
