--- a/TGCircuit_RC_Arduino_old.ipynb
+++ b/TGCircuit_RC_Arduino_old.ipynb
@@ -32,7 +32,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.py\n",
+    "%run Import_bibliotheques.ipynb\n",
     "# On initialise la carte Arduino avec le protocole telemetrix\n",
     "from telemetrix import telemetrix"
    ]
