--- a/TGDroiteEtalonnageMonteCarlo.ipynb
+++ b/TGDroiteEtalonnageMonteCarlo.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.py\n",
+    "%run Import_bibliotheques.ipynb\n",
     "from numpy.random import normal    # charge la fonction de génération de distribution selon une loi normale"
    ]
   },
