--- a/TGKepler2emeLoi.ipynb
+++ b/TGKepler2emeLoi.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.py"
+    "%run Import_bibliotheques.ipynb"
    ]
   },
   {
