--- a/TGTitrage_pHmetrique_Arduino.ipynb
+++ b/TGTitrage_pHmetrique_Arduino.ipynb
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.py\n",
+    "%run Import_bibliotheques.ipynb\n",
     "%run Arduino.ipynb\n",
     "connexion_arduino()"
    ]
