--- a/Vecteurs.ipynb
+++ b/Vecteurs.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.py"
+    "%run Import_bibliotheques.ipynb"
    ]
   },
   {
