Fix: ajout de nbformat pour permettre le %run des notebooks

--- a/Import_bibliotheques.ipynb
+++ b/Import_bibliotheques.ipynb
@@ -11,8 +11,8 @@
     "import sys\n",
     "if 'pyodide' in sys.modules:\n",
     "    import piplite\n",
-    "    # On installe uniquement le strict nécessaire\n",
-    "    await piplite.install(['numpy', 'scipy', 'matplotlib', 'lmfit', 'ipympl'])\n",
+    "    # Installation des dépendances minimales\n",
+    "    await piplite.install(['numpy', 'scipy', 'matplotlib', 'lmfit', 'ipympl', 'nbformat'])\n",
     "\n",
     "from pylab import *\n",
     "from scipy import interpolate\n",
