Simplification ultime : import .py avec trigger auto-install

--- a/1GSpeCompositionFinale.ipynb
+++ b/1GSpeCompositionFinale.ipynb
@@ -30,7 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb"
+    "import scipy, lmfit, ipympl; from Import_bibliotheques import *"
    ]
   },
   {
