--- a/1GENSDecroissanceRadioactive.ipynb
+++ b/1GENSDecroissanceRadioactive.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb"
+    "import scipy, lmfit, ipympl; from Import_bibliotheques import *"
    ]
   },
   {
