--- a/2ndeReactifLimitant.ipynb
+++ b/2ndeReactifLimitant.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb"
+    "import scipy, lmfit, ipympl; from Import_bibliotheques import *"
    ]
   },
   {
