--- a/TGInterferences.ipynb
+++ b/TGInterferences.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "%run Import_bibliotheques.ipynb\n",
+    "import scipy, lmfit, ipympl; from Import_bibliotheques import *\n",
     "from matplotlib.animation import FuncAnimation"
    ]
   },
