Fix final : utilisation de piplite.install explicite pour éviter les ModuleNotFoundError

--- a/2ndeReactifLimitant.ipynb
+++ b/2ndeReactifLimitant.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "import scipy, lmfit, ipympl; from Import_bibliotheques import *"
+    "import piplite; await piplite.install(["scipy", "lmfit", "ipympl"]); from pylab import *; from Import_bibliotheques import *"
    ]
   },
   {
