--- a/TGTitrage_pHmetrique_Arduino.ipynb
+++ b/TGTitrage_pHmetrique_Arduino.ipynb
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "import scipy, lmfit, ipympl; from Import_bibliotheques import *\n",
+    "import piplite; await piplite.install(["scipy", "lmfit", "ipympl"]); from pylab import *; from Import_bibliotheques import *\n",
     "%run Arduino.ipynb\n",
     "connexion_arduino()"
    ]
