--- a/Statistiques_Arduino.ipynb
+++ b/Statistiques_Arduino.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "import scipy, lmfit, ipympl; from Import_bibliotheques import *\n",
+    "import piplite; await piplite.install(["scipy", "lmfit", "ipympl"]); from pylab import *; from Import_bibliotheques import *\n",
     "%run arduino.ipynb"
    ]
   },
