--- a/TGCircuit_RC_Arduino_old.ipynb
+++ b/TGCircuit_RC_Arduino_old.ipynb
@@ -32,7 +32,7 @@
    },
    "outputs": [],
    "source": [
-    "import scipy, lmfit, ipympl; from Import_bibliotheques import *\n",
+    "import piplite; await piplite.install(["scipy", "lmfit", "ipympl"]); from pylab import *; from Import_bibliotheques import *\n",
     "# On initialise la carte Arduino avec le protocole telemetrix\n",
     "from telemetrix import telemetrix"
    ]
