--- a/TGIncertitudesComposeesMonteCarlo.ipynb
+++ b/TGIncertitudesComposeesMonteCarlo.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "import scipy, lmfit, ipympl; from Import_bibliotheques import *\n",
+    "import piplite; await piplite.install(["scipy", "lmfit", "ipympl"]); from pylab import *; from Import_bibliotheques import *\n",
     "from numpy.random import normal    # charge la fonction de génération de distribution selon une loi normale"
    ]
   },
