Fix: correction syntaxe JSON dans tous les notebooks

--- a/Graphique.ipynb
+++ b/Graphique.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "import piplite; await piplite.install(["scipy", "lmfit", "ipympl"]); from pylab import *; from Import_bibliotheques import *"
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
    ]
   },
   {
