--- a/SpectrophotometreUviline.ipynb
+++ b/SpectrophotometreUviline.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "import piplite; await piplite.install(["scipy", "lmfit", "ipympl"]); from pylab import *; from Import_bibliotheques import *\n",
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *\n",
     "\n",
     "from serial import *\n",
     "s = Serial()    # s est le nom du port de communication avec le spectrophotomètre\n",
