--- a/TGInterferences.ipynb
+++ b/TGInterferences.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "import piplite; await piplite.install(["scipy", "lmfit", "ipympl"]); from pylab import *; from Import_bibliotheques import *\n",
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *\n",
     "from matplotlib.animation import FuncAnimation"
    ]
   },
