--- a/Statistiques.ipynb
+++ b/Statistiques.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "import piplite; await piplite.install(["scipy", "lmfit", "ipympl"]); from pylab import *; from Import_bibliotheques import *"
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
    ]
   },
   {
