--- a/TGSuiviCinetique.ipynb
+++ b/TGSuiviCinetique.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "import piplite; await piplite.install(["scipy", "lmfit", "ipympl"]); from pylab import *; from Import_bibliotheques import *"
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
    ]
   },
   {
