Correction finale : graphiques interactifs via %matplotlib widget et nettoyage code

--- a/2ndeReactifLimitant.ipynb
+++ b/2ndeReactifLimitant.ipynb
@@ -27,7 +27,8 @@
    },
    "outputs": [],
    "source": [
-    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
+    "%matplotlib widget
+import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
    ]
   },
   {
