--- a/TGDroiteEtalonnageMonteCarlo.ipynb
+++ b/TGDroiteEtalonnageMonteCarlo.ipynb
@@ -25,7 +25,8 @@
    },
    "outputs": [],
    "source": [
-    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *\n",
+    "%matplotlib widget
+import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *\n",
     "from numpy.random import normal    # charge la fonction de génération de distribution selon une loi normale"
    ]
   },
