--- a/1GSpeCompositionFinale.ipynb
+++ b/1GSpeCompositionFinale.ipynb
@@ -30,8 +30,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib widget
-import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
+"%matplotlib widget\nimport piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
    ]
   },
   {
