--- a/TGInterferences.ipynb
+++ b/TGInterferences.ipynb
@@ -28,8 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib widget
-import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *\n",
+"%matplotlib widget\nimport piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *\n",
     "from matplotlib.animation import FuncAnimation"
    ]
   },
