Réparation structurelle JSON des notebooks

--- a/Export_html.ipynb
+++ b/Export_html.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nom_fichier = \"Modelisation\""
+    "%matplotlib widget\n",
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
    ]
   },
   {
