--- a/Statistiques.ipynb
+++ b/Statistiques.ipynb
@@ -29,7 +29,8 @@
    },
    "outputs": [],
    "source": [
-"%matplotlib widget\nimport piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
+    "%matplotlib widget\n",
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
    ]
   },
   {
