--- a/TGIncertitudesComposeesMonteCarlo.ipynb
+++ b/TGIncertitudesComposeesMonteCarlo.ipynb
@@ -25,8 +25,8 @@
    },
    "outputs": [],
    "source": [
-"%matplotlib widget\nimport piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *\n",
-    "from numpy.random import normal    # charge la fonction de génération de distribution selon une loi normale"
+    "%matplotlib widget\n",
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
    ]
   },
   {
