Fix: installation des modules avant l'activation de %matplotlib widget

--- a/animation.ipynb
+++ b/animation.ipynb
@@ -47,8 +47,8 @@
     }
    ],
    "source": [
-    "%matplotlib widget\n",
-    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *\n",
+    "%matplotlib widget"
    ]
   }
  ],
