--- a/2ndeReactifLimitant.ipynb
+++ b/2ndeReactifLimitant.ipynb
@@ -27,8 +27,8 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
-    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *\n",
+    "%matplotlib widget"
    ]
   },
   {
