--- a/TGSuiviCinetique.ipynb
+++ b/TGSuiviCinetique.ipynb
@@ -28,8 +28,8 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
-    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *"
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *\n",
+    "%matplotlib widget"
    ]
   },
   {
