Fix: utilisation de l'activation Python pur pour ipympl et réintégration des tailles rcParams

--- a/2ndeReactifLimitant.ipynb
+++ b/2ndeReactifLimitant.ipynb
@@ -27,8 +27,15 @@
    },
    "outputs": [],
    "source": [
-    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl']); from pylab import *; from Import_bibliotheques import *\n",
-    "%matplotlib widget"
+    "import piplite\n",
+    "await piplite.install(['scipy', 'lmfit', 'ipympl', 'matplotlib'])\n",
+    "import matplotlib.pyplot as plt\n",
+    "try:\n",
+    "    plt.switch_backend('module://ipympl.backend_nbagg')\n",
+    "except Exception:\n",
+    "    pass\n",
+    "from pylab import *\n",
+    "from Import_bibliotheques import *"
    ]
   },
   {
