Fix final : interactivité ipympl forcée et langue FR native

--- a/Modelisation.ipynb
+++ b/Modelisation.ipynb
@@ -33,12 +33,10 @@
    "outputs": [],
    "source": [
     "import piplite\n",
-    "await piplite.install(['scipy', 'lmfit', 'ipympl', 'matplotlib'])\n",
-    "import matplotlib.pyplot as plt\n",
-    "try:\n",
-    "    plt.switch_backend('module://ipympl.backend_nbagg')\n",
-    "except Exception:\n",
-    "    pass\n",
+    "await piplite.install(['scipy', 'lmfit', 'ipympl'])\n",
+    "# Activation de l'interactivité APRES l'installation\n",
+    "from IPython import get_ipython\n",
+    "get_ipython().run_line_magic('matplotlib', 'widget')\n",
     "from pylab import *\n",
     "from Import_bibliotheques import *"
    ]
