Fix final : patch ImportError alert et langue FR forcée

--- a/Export_html.ipynb
+++ b/Export_html.ipynb
@@ -7,6 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "if 'pyodide' in sys.modules:\n",
+    "    try:\n",
+    "        import js; js.alert = lambda s: print(f'ALERTE : {s}')\n",
+    "    except: pass\n",
     "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl'])\n",
     "%matplotlib widget\n",
     "from pylab import *; from Import_bibliotheques import *"
