Fix: bouclier anti-ImportError et forcage langue FR

--- a/Export_html.ipynb
+++ b/Export_html.ipynb
@@ -8,10 +8,13 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "# Bouclier contre les erreurs d'extensions (js.alert, js.document, etc.)\n",
     "if 'pyodide' in sys.modules:\n",
-    "    try:\n",
-    "        import js; js.alert = lambda s: print(f'ALERTE : {s}')\n",
-    "    except: pass\n",
+    "    import types\n",
+    "    m = types.ModuleType('js')\n",
+    "    sys.modules['js'] = m\n",
+    "    m.alert = lambda s: print(f'Alerte: {s}')\n",
+    "    m.document = types.SimpleNamespace(location=types.SimpleNamespace(href=''))\n",
     "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl'])\n",
     "%matplotlib widget\n",
     "from pylab import *; from Import_bibliotheques import *"
