--- a/TGSimulationTitrage.ipynb
+++ b/TGSimulationTitrage.ipynb
@@ -25,14 +25,19 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "# Bouclier contre les erreurs d'extensions (js.alert, js.document, etc.)\n",
-    "if 'pyodide' in sys.modules:\n",
-    "    import types\n",
+    "try:\n",
+    "    import js\n",
+    "    if not hasattr(js, 'document'):\n",
+    "        import types\n",
+    "        js.document = types.SimpleNamespace(location=types.SimpleNamespace(href=''))\n",
+    "    if not hasattr(js, 'alert'):\n",
+    "        js.alert = lambda s: print(f'JS Alert: {s}')\n",
+    "except ImportError:\n",
+    "    import sys, types\n",
     "    m = types.ModuleType('js')\n",
     "    sys.modules['js'] = m\n",
-    "    m.alert = lambda s: print(f'Alerte: {s}')\n",
     "    m.document = types.SimpleNamespace(location=types.SimpleNamespace(href=''))\n",
+    "    m.alert = lambda s: print(f'JS Alert')\n",
     "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl'])\n",
     "%matplotlib widget\n",
     "from pylab import *; from Import_bibliotheques import *"
