Fix: correctif TimerTornado et stabilisation langue

--- a/animation.ipynb
+++ b/animation.ipynb
@@ -47,19 +47,22 @@
     }
    ],
    "source": [
+    "import sys, types\n",
+    "# 1. Réparation des erreurs d'extensions et de Matplotlib 3.9+\n",
     "try:\n",
+    "    import matplotlib.backends.backend_webagg_core as bwc\n",
+    "    if not hasattr(bwc, 'TimerTornado'):\n",
+    "        bwc.TimerTornado = type('TimerTornado', (object,), {})\n",
     "    import js\n",
     "    if not hasattr(js, 'document'):\n",
-    "        import types\n",
     "        js.document = types.SimpleNamespace(location=types.SimpleNamespace(href=''))\n",
-    "    if not hasattr(js, 'alert'):\n",
-    "        js.alert = lambda s: print(f'JS Alert: {s}')\n",
-    "except ImportError:\n",
-    "    import sys, types\n",
+    "except:\n",
     "    m = types.ModuleType('js')\n",
     "    sys.modules['js'] = m\n",
     "    m.document = types.SimpleNamespace(location=types.SimpleNamespace(href=''))\n",
     "    m.alert = lambda s: print(f'JS Alert')\n",
+    "\n",
+    "# 2. Installation et Activation\n",
     "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl'])\n",
     "%matplotlib widget\n",
     "from pylab import *; from Import_bibliotheques import *"
