Fix: downgrade matplotlib et injection profonde langue FR

--- a/Export_html.ipynb
+++ b/Export_html.ipynb
@@ -8,11 +8,8 @@
    "outputs": [],
    "source": [
     "import sys, types\n",
-    "# 1. Réparation des erreurs d'extensions et de Matplotlib 3.9+\n",
+    "# 1. Protection contre les erreurs d'extensions\n",
     "try:\n",
-    "    import matplotlib.backends.backend_webagg_core as bwc\n",
-    "    if not hasattr(bwc, 'TimerTornado'):\n",
-    "        bwc.TimerTornado = type('TimerTornado', (object,), {})\n",
     "    import js\n",
     "    if not hasattr(js, 'document'):\n",
     "        js.document = types.SimpleNamespace(location=types.SimpleNamespace(href=''))\n",
@@ -22,8 +19,8 @@
     "    m.document = types.SimpleNamespace(location=types.SimpleNamespace(href=''))\n",
     "    m.alert = lambda s: print(f'JS Alert')\n",
     "\n",
-    "# 2. Installation et Activation\n",
-    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipympl'])\n",
+    "# 2. Installation (Matplotlib 3.8 pour éviter l'erreur TimerTornado)\n",
+    "import piplite; await piplite.install(['matplotlib<3.9', 'scipy', 'lmfit', 'ipympl'])\n",
     "%matplotlib widget\n",
     "from pylab import *; from Import_bibliotheques import *"
    ]
