Reset to stable: simple imports, English interface, inline plots

--- a/1GSpeCompositionFinale.ipynb
+++ b/1GSpeCompositionFinale.ipynb
@@ -30,22 +30,9 @@
    },
    "outputs": [],
    "source": [
-    "import sys, types\n",
-    "# 1. Protection contre les erreurs d'extensions\n",
-    "try:\n",
-    "    import js\n",
-    "    if not hasattr(js, 'document'):\n",
-    "        js.document = types.SimpleNamespace(location=types.SimpleNamespace(href=''))\n",
-    "except:\n",
-    "    m = types.ModuleType('js')\n",
-    "    sys.modules['js'] = m\n",
-    "    m.document = types.SimpleNamespace(location=types.SimpleNamespace(href=''))\n",
-    "    m.alert = lambda s: print(f'JS Alert')\n",
-    "\n",
-    "# 2. Installation (Matplotlib 3.8 pour éviter l'erreur TimerTornado)\n",
-    "import piplite; await piplite.install(['matplotlib<3.9', 'scipy', 'lmfit', 'ipympl'])\n",
-    "%matplotlib widget\n",
-    "from pylab import *; from Import_bibliotheques import *"
+    "import piplite; await piplite.install(['scipy', 'lmfit'])\n",
+    "%matplotlib inline\n",
+    "from Import_bibliotheques import *"
    ]
   },
   {
