Fix: add ipywidgets to requirements and notebooks

--- a/GraphiquePresentation.ipynb
+++ b/GraphiquePresentation.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "import piplite; await piplite.install(['scipy', 'lmfit'])\n",
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipywidgets'])\n",
     "%matplotlib inline\n",
     "from Import_bibliotheques import *"
    ]
