--- a/Export_html.ipynb
+++ b/Export_html.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import piplite; await piplite.install(['scipy', 'lmfit'])\n",
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipywidgets'])\n",
     "%matplotlib inline\n",
     "from Import_bibliotheques import *"
    ]
