--- a/animation.ipynb
+++ b/animation.ipynb
@@ -47,7 +47,7 @@
     }
    ],
    "source": [
-    "import piplite; await piplite.install(['scipy', 'lmfit'])\n",
+    "import piplite; await piplite.install(['scipy', 'lmfit', 'ipywidgets'])\n",
     "%matplotlib inline\n",
     "from Import_bibliotheques import *"
    ]
